objects/Course_Catalog__c.object
<CustomObject>
    <fields>
        <fullName>Break_Duration__c</fullName>
        <label>Break Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class_Duration__c</fullName>
        <label>Class Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Catalog_Tags__c</fullName>
        <label>Course Catalog Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Breaks__c</fullName>
        <label>Number of Breaks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Classes__c</fullName>
        <label>Number of Classes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Instructors__c</fullName>
        <label>Number of Instructors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Students__c</fullName>
        <label>Number of Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ratio_to_Instructor__c</fullName>
        <label>Ratio to Instructor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Service</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Nurse Assistant Training</fullName>
                </value>
                <value>
                    <fullName>Nurse Assistant Testing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Course Catalog</label>
    <nameField>
        <label>Course Catalog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses Catalog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>